<resources>
    <string name="app_name">MyMed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mystring">My</string>
    <string name="medstring">Med</string>
    <string name="Email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="nome">Nome:</string>
    <string name="dataNascimento">Data de Nascimento:</string>
    <string name="emailLabelTextView">Email:</string>
    <string name="emailHintEditText">Seuemail@gmail.com</string>
    <string name="cadastrarButtonText">Cadastre-se</string>
    <string name="cadastrarButtonText2">Cadastrar</string>
    <string name="loginButtonText">Login</string>
    <string name="anotacoes">Anotações:</string>
    <string name="tocEditar">Toque para editar</string>
    <string name="addNovoRemedio">Adicione uma nova Medicação:</string>
    <string name="nome_Remedio">Nome da Medicação:</string>
    <string name="hint_Nome"> Nome da Medicação</string>
    <string name="horario_Remedio">Horário Inicial:</string>
    <string name="frequencia">Frequência:</string>
    <string name="diario">Diariamente</string>
    <string name="diasSemana">Escolher dias da Semana</string>
    <string name="intervaloHoras">Escolher Intervalo de Horas</string>
    <string name="anotacoes_op">Anotações (Opicionais)</string>
    <string name="excluir">Excluir</string>
    <string name="salvar">Salvar</string>
    <string name="config">Configurações</string>
    <string name="relato">Relato</string>
    <string name="tesmosDeUso">Termos de Uso</string>
    <string name="termos">  O aplicativo MyMed e seus desenvolvedores não se responsabilizam por mal uso da medicação, devido a informações preenchidas de maneira incorreta, esquecimentos e excesso de medicação. O aplicativo busca ser um lembrete apenas para auxiliar no consumo de medicações no dia a dia.
        Atenciosamente, Equipe MyMed.</string>
    <string name="ex_anotacoes">Escreva suas anotações aqui</string>
</resources>